--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
         <div class="container">
             <img class="logo" src="imgs/logo@2x.png" alt="Psi Fora da Curva">
             <h1>Atraia pacientes e <span class="bold-span">aumente</span> sua renda através do <span class="bold-span">Instagram</span></h1>
-            <a href="https://go.hotmart.com/W55598979H" rel="noopener" class="btn">quero comprar agora</a>
+            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">quero comprar agora</a>
         </div>
 
     </header>
@@ -37,7 +37,7 @@
 
             <h1>o psi fora da curva</h1>
             <p>Foi criado com um método desenvolvido por mim, onde ensino exatamente o que funciona para psicólogos que querem, encher a agenda, aumentar sua renda, fidelizar pacientes, <span class="bold-span">conhecer novas possibilidades na Psicologia e empreender nas redes sociais.</span></p>
-            <a href="https://go.hotmart.com/W55598979H" rel="noopener" class="btn">fazer parte do psi fora da curva</a>
+            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">fazer parte do psi fora da curva</a>
 
         </div>
 
@@ -254,7 +254,7 @@
             </li>
         </ul>
 
-        <a href="https://go.hotmart.com/W55598979H" rel="noopener" class="btn">garantir minha vaga</a>
+        <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">garantir minha vaga</a>
 
     </section>
 
@@ -329,7 +329,7 @@
             <p><s>de R$1.997,00</s> por apenas <span class="bold-span"> R$597,00 ou 12x de R$49,75</span></p>
             <span class="separador-oferta"></span>
             <p>valor exclusivo para a primeira turma</p>
-            <a href="https://go.hotmart.com/W55598979H" rel="noopener" class="btn">não quero perder a oportunidade</a>
+            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">não quero perder a oportunidade</a>
         </div>
         <img class="garantia" src="imgs/garantia@2x.png" alt="Garantia de 7 dias">
         <p>São 7 dias para decidir se vai ou não continuar <span class="bold-span">sua jornada como profissional fora da curva.</span> Caso não consiga continuar, eu devolvo o seu dinheiro <span class="bold-span"> sem qualquer complicação</span>.</p>
@@ -360,7 +360,7 @@
     <section class="last-cta">
         <h1>Uma metodologia para você seguir de forma clara e objetiva, com passos que de fato fazem a diferença,
             sem nada que não seja realmente necessário.</h1>
-        <a href="https://go.hotmart.com/W55598979H" rel="noopener" class="btn">quero me tornar um psi fora da curva</a>
+        <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">quero me tornar um psi fora da curva</a>
     </section>
 
     <!-- Footer -->
