--- a/index.html
+++ b/index.html
@@ -298,76 +298,76 @@
 
     <div class="video-wrapper">
         <div class="aspect-ratio">
-            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/wdS9TVe4_hQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/wdS9TVe4_hQ" title="YouTube video player" allow="accelerometer;" allowfullscreen></iframe>
         </div>
         <div class="aspect-ratio">
-            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/3bxKx3DI8vY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/3bxKx3DI8vY" title="YouTube video player" allow="accelerometer; allowfullscreen></iframe>
         </div>
-        <div class="aspect-ratio">
-            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/AiYf1R5tZZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class=" aspect-ratio">
+                <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/AiYf1R5tZZk" title="YouTube video player" allow="accelerometer; allowfullscreen></iframe>
         </div>
 
     </div>
 
 
-    <section class="depoimentos">
-        <div class="depoimentos-prints">
-            <span class="separador-depoimentos"></span>
-            <ul class="depoimentos-lista">
-                <li><img loading="lazy" src="imgs/depoimento1@2x.png" alt="Depoimento 1"></li>
-                <li><img loading="lazy" src="imgs/depoimento2@2x.png" alt="Depoimento 2"></li>
-                <li><img loading="lazy" src="imgs/depoimento3@2x.png" alt="Depoimento 3"></li>
-            </ul>
-            <span class="separador-depoimentos"></span>
-        </div>
-    </section>
+    <section class=" depoimentos">
+                    <div class="depoimentos-prints">
+                        <span class="separador-depoimentos"></span>
+                        <ul class="depoimentos-lista">
+                            <li><img loading="lazy" src="imgs/depoimento1@2x.png" alt="Depoimento 1"></li>
+                            <li><img loading="lazy" src="imgs/depoimento2@2x.png" alt="Depoimento 2"></li>
+                            <li><img loading="lazy" src="imgs/depoimento3@2x.png" alt="Depoimento 3"></li>
+                        </ul>
+                        <span class="separador-depoimentos"></span>
+                    </div>
+                    </section>
 
-    <!-- Seção de Oferta -->
-    <section class="oferta">
-        <h1>Investimento</h1>
-        <div class="caixa-oferta">
-            <p><s>de R$1.997,00</s> por apenas <span class="bold-span"> R$597,00 ou 12x de R$49,75</span></p>
-            <span class="separador-oferta"></span>
-            <p>valor exclusivo para a primeira turma</p>
-            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">não quero perder a oportunidade</a>
-        </div>
-        <img class="garantia" src="imgs/garantia@2x.png" alt="Garantia de 7 dias">
-        <p>São 7 dias para decidir se vai ou não continuar <span class="bold-span">sua jornada como profissional fora da curva.</span> Caso não consiga continuar, eu devolvo o seu dinheiro <span class="bold-span"> sem qualquer complicação</span>.</p>
-        <p><span class="bold-span">PS:</span> Acho muito difícil você não querer continuar fazendo parte desta super jornada!</p>
-        <span class="separador-depoimentos"></span>
-    </section>
-    </section>
+                    <!-- Seção de Oferta -->
+                    <section class="oferta">
+                        <h1>Investimento</h1>
+                        <div class="caixa-oferta">
+                            <p><s>de R$1.997,00</s> por apenas <span class="bold-span"> R$597,00 ou 12x de R$49,75</span></p>
+                            <span class="separador-oferta"></span>
+                            <p>valor exclusivo para a primeira turma</p>
+                            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">não quero perder a oportunidade</a>
+                        </div>
+                        <img class="garantia" src="imgs/garantia@2x.png" alt="Garantia de 7 dias">
+                        <p>São 7 dias para decidir se vai ou não continuar <span class="bold-span">sua jornada como profissional fora da curva.</span> Caso não consiga continuar, eu devolvo o seu dinheiro <span class="bold-span"> sem qualquer complicação</span>.</p>
+                        <p><span class="bold-span">PS:</span> Acho muito difícil você não querer continuar fazendo parte desta super jornada!</p>
+                        <span class="separador-depoimentos"></span>
+                    </section>
+                    </section>
 
-    <!-- Seção: Quem é Flávia? -->
-    <section class="sobre-wrapper">
-        <div class="sobre-grid">
-            <h1>Flávia C.X</h1>
-            <div class="sobre-texto">
-                <div class="texto-wrapper">
-                    <p><span class="bold-span"> Psicóloga, empreendedora e mentora.</span></p>
-                    <p>Após criar minha primeira empresa de fotografia, me dediquei ao marketing digital para alavancar os resultados e conseguir sair do CLT para uma agenda cheia e cobrando um valor justo pelo meu serviço. Juntando todo o conhecimento de empreendedorismo e marketing comecei a dar dicas aos meus colegas de sala da faculdade e outros profissionais, depois mentoria e consultorias e foi aí então que descobri minha maior paixão: ensinar sobre empreendedorismo e marketing digital a outros psicólogos.
-                    <p>Como na época eu não podia atender ainda por não estar formada, comecei a dar mentoria a outros Psi`s já formados, e assim o método foi se aprimorando e hoje está validado, trazendo resultados incríveis para os alunos que em pouco tempo conseguiram os primeiros pacientes e outros que encheram suas agendas!</p>
-                    <p>Criei o curso, Psi Fora da Curva, para que cada vez mais psicólogos vivam dessa profissão maravilhosa que é a Psicologia, sem ter que ficar anos dependendo dos atendimentos de convênios. Ou viver pensando que o R.H é a única forma de ser bem remunerado na profissão.</p>
-                    <p>O conteúdo do curso foi feito para tirar o atraso que saímos da faculdade e ensinar sobre empreendedorismo e marketing digital, para aumentar seus resultados e conseguir mais pacientes utilizando as redes sociais. Aproveite, divirta-se e se torne uma Psi Fora da Curva. Bora lá?!</p>
-                </div>
-                <img loading="lazy" src="imgs/foto02@2x.png" alt="">
-            </div>
-        </div>
-    </section>
+                    <!-- Seção: Quem é Flávia? -->
+                    <section class="sobre-wrapper">
+                        <div class="sobre-grid">
+                            <h1>Flávia C.X</h1>
+                            <div class="sobre-texto">
+                                <div class="texto-wrapper">
+                                    <p><span class="bold-span"> Psicóloga, empreendedora e mentora.</span></p>
+                                    <p>Após criar minha primeira empresa de fotografia, me dediquei ao marketing digital para alavancar os resultados e conseguir sair do CLT para uma agenda cheia e cobrando um valor justo pelo meu serviço. Juntando todo o conhecimento de empreendedorismo e marketing comecei a dar dicas aos meus colegas de sala da faculdade e outros profissionais, depois mentoria e consultorias e foi aí então que descobri minha maior paixão: ensinar sobre empreendedorismo e marketing digital a outros psicólogos.
+                                    <p>Como na época eu não podia atender ainda por não estar formada, comecei a dar mentoria a outros Psi`s já formados, e assim o método foi se aprimorando e hoje está validado, trazendo resultados incríveis para os alunos que em pouco tempo conseguiram os primeiros pacientes e outros que encheram suas agendas!</p>
+                                    <p>Criei o curso, Psi Fora da Curva, para que cada vez mais psicólogos vivam dessa profissão maravilhosa que é a Psicologia, sem ter que ficar anos dependendo dos atendimentos de convênios. Ou viver pensando que o R.H é a única forma de ser bem remunerado na profissão.</p>
+                                    <p>O conteúdo do curso foi feito para tirar o atraso que saímos da faculdade e ensinar sobre empreendedorismo e marketing digital, para aumentar seus resultados e conseguir mais pacientes utilizando as redes sociais. Aproveite, divirta-se e se torne uma Psi Fora da Curva. Bora lá?!</p>
+                                </div>
+                                <img loading="lazy" src="imgs/foto02@2x.png" alt="">
+                            </div>
+                        </div>
+                    </section>
 
-    <!-- Seção: Last Call -->
+                    <!-- Seção: Last Call -->
 
-    <section class="last-cta">
-        <h1>Uma metodologia para você seguir de forma clara e objetiva, com passos que de fato fazem a diferença,
-            sem nada que não seja realmente necessário.</h1>
-        <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">quero me tornar um psi fora da curva</a>
-    </section>
+                    <section class="last-cta">
+                        <h1>Uma metodologia para você seguir de forma clara e objetiva, com passos que de fato fazem a diferença,
+                            sem nada que não seja realmente necessário.</h1>
+                        <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">quero me tornar um psi fora da curva</a>
+                    </section>
 
-    <!-- Footer -->
-    <footer>
-        <p><span class="bold-span">Flávia C. X &copy; 2021 - Todos os Direitos Reservados</span></p>
-        <p>Duvidas, envie um e-mail para suporte@flaviacx.com.br</p>
-    </footer>
+                    <!-- Footer -->
+                    <footer>
+                        <p><span class="bold-span">Flávia C. X &copy; 2021 - Todos os Direitos Reservados</span></p>
+                        <p>Duvidas, envie um e-mail para suporte@flaviacx.com.br</p>
+                    </footer>
 
 </body>
 
