--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
+    <meta name="description" content="Aprenda  de vez a como atrair pacientes e aumentar sua renda através do Instagram">
+    <meta name="keywords" content="Pacientes Instagram; Pacieintes Insta; Renda Instagram; Psicólogos Instagram; Curso Psicologia;">
     <meta name="theme-color" content="#F17834">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -14,6 +14,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" sizes="32x32" href="imgs/favicon32.png">
+    <meta property="og:locale" content="pt_BR ">
+    <meta property="og:title" content="Psi Fora da Curva">
+    <meta property="og:site_name" content="flaviacx.com.br" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https:flaviacx.com.br/psiforadacurva">
+    <meta property="og:image" content="#">
     <title>Psi Fora da Curva</title>
 </head>
 
