--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <meta name="keywords" content="Pacientes Instagram; Pacieintes Insta; Renda Instagram; Psicólogos Instagram; Curso Psicologia;">
     <meta name="theme-color" content="#F17834">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" sizes="32x32" href="imgs/favicon32.png">
     <meta property="og:locale" content="pt_BR ">
     <meta property="og:title" content="Psi Fora da Curva">
-    <meta property="og:site_name" content="flaviacx.com.br" />
+    <meta property="og:site_name" content="flaviacx.com.br/psiforadacurva" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https:flaviacx.com.br/psiforadacurva">
-    <meta property="og:image" content="#">
+    <meta property="og:image" content=https://flaviacx.com.br/imgs/foto03@2x.png">
     <title>Psi Fora da Curva</title>
 </head>
 
@@ -31,7 +30,7 @@
         <div class="container">
             <img class="logo" src="imgs/logo@2x.png" alt="Psi Fora da Curva">
             <h1>Atraia pacientes e <span class="bold-span">aumente</span> sua renda através do <span class="bold-span">Instagram</span></h1>
-            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">quero comprar agora</a>
+            <a href="#" rel="noopener" target="_blank" class="btn">quero comprar agora</a>
         </div>
 
     </header>
@@ -43,7 +42,7 @@
 
             <h1>o psi fora da curva</h1>
             <p>Foi criado com um método desenvolvido por mim, onde ensino exatamente o que funciona para psicólogos que querem, encher a agenda, aumentar sua renda, fidelizar pacientes, <span class="bold-span">conhecer novas possibilidades na Psicologia e empreender nas redes sociais.</span></p>
-            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">fazer parte do psi fora da curva</a>
+            <a href="#" rel="noopener" target="_blank" class="btn">fazer parte do psi fora da curva</a>
 
         </div>
 
@@ -70,7 +69,7 @@
                 <li class="card">
                     <div class="card-line">
                         <img loading="lazy" class="icones" src="imgs/ethic.svg" alt="Ícone de ética">
-                        <p class="cards-titulo">Ética</p>
+                        <p class="cards-titulo">Ético</p>
                     </div>
                     <p class="cards-texto">Para psis que querem <span class="bold-span">encher a agenda</span> e aumentar sua renda <span class="bold-span">de forma ética</span>, seguindo CRP.
                 </li>
@@ -78,7 +77,7 @@
                 <li class="card">
                     <div class="card-line">
                         <img loading="lazy" class="icones" src="imgs/estrategia.svg" alt="Ícone de estrategia">
-                        <p class="cards-titulo">Leve</p>
+                        <p class="cards-titulo">Estratégico</p>
                     </div>
                     <p class="cards-texto">Para quem quer aprender a <span class="bold-span">se posicionar</span> dentro do Instagram de <span class="bold-span">forma estratégica</span>.</p>
                 </li>
@@ -260,7 +259,7 @@
             </li>
         </ul>
 
-        <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">garantir minha vaga</a>
+        <a href="#" rel="noopener" target="_blank" class="btn">garantir minha vaga</a>
 
     </section>
 
@@ -271,31 +270,33 @@
             <h1>E tem mais bônus para você</h1>
             <div class="bonus">
                 <img loading="lazy" src="imgs/trafego-pago.svg" alt="Tráfego Pago">
-                <p>Tráfego Pago (Instagram e Gerenciador de Anúncios do Facebook) <del>R$ 650,0</del></p>
+                <p>Tráfego Pago (Instagram e Gerenciador de Anúncios do Facebook) <del>R$650,00</del></p>
             </div>
             <div class="bonus">
                 <img loading="lazy" src="imgs/reels.svg" alt="Reels">
-                <p>Reels que Bombam <del>R$ 150,0</del></p>
+                <p>Reels que Bombam <del>R$150,00</del></p>
             </div>
             <div class="bonus">
-                <img loading="lazy" src="imgs/calendar.svg" alt="Canva">
-                <p>Super Pack de Canva com 30 artes prontas para editar <del>R$ 97,00</del></p>
+                <img loading="lazy" src="imgs/canva.svg" alt="Canva">
+                <p>Super Pack de Canva com 30 artes prontas para editar <del>R$97,00</del></p>
             </div>
             <div class="bonus">
                 <img loading="lazy" src="imgs/live.svg" alt="Live">
-                <p>3 Encontros ao vivo comigo para tirar dúvidas <del>R$ 1.100,00</del></p>
+                <p>3 Encontros ao vivo comigo para tirar dúvidas <del>R$1.100,00</del></p>
             </div>
             <div class="bonus">
                 <img loading="lazy" src="imgs/calendar.svg" alt="Calendário">
-                <p>Calendário de posts para 30 dias <del>R$ 47,00</del></p>
+                <p>Calendário de posts para 30 dias <del>R$47,00</del></p>
             </div>
             <div class="bonus">
                 <img loading="lazy" src="imgs/win.svg" alt="Troféu">
-                <p>20 Mentorias para os 10 primeiros compradores, sendo 2 mentorias para cada** <del>R$ 2.000,00</del></p>
+                <p>20 Mentorias para os 10 primeiros compradores, sendo 2 mentorias para cada** <del>R$2.000,00</del></p>
             </div>
         </div>
 
     </section>
+
+    <a href="#" class="btn bonus-btn" rel="noopener" target="_blank">adquirir bônus</a>
 
     <!-- Seção: Depoimentos -->
     <section class="depoimentos">
@@ -307,10 +308,10 @@
             <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/wdS9TVe4_hQ" title="YouTube video player" allow="accelerometer;" allowfullscreen></iframe>
         </div>
         <div class="aspect-ratio">
-            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/3bxKx3DI8vY" title="YouTube video player" allow="accelerometer; allowfullscreen></iframe>
+            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/3bxKx3DI8vY" title="YouTube video player" allow="accelerometer;" allowfullscreen></iframe>
         </div>
         <div class=" aspect-ratio">
-                <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/AiYf1R5tZZk" title="YouTube video player" allow="accelerometer; allowfullscreen" </iframe>
+            <iframe loading="lazy" width="640" height="360" src="https://www.youtube.com/embed/AiYf1R5tZZk" title="YouTube video player" allow="accelerometer;" allowfullscreen"></iframe>
         </div>
 
     </div>
@@ -332,10 +333,10 @@
     <section class="oferta">
         <h1>Investimento</h1>
         <div class="caixa-oferta">
-            <p><s>de R$1.997,00</s> por apenas <span class="bold-span"> R$597,00 ou 12x de R$49,75</span></p>
+            <p><s>de R$1.997,00</s> por apenas <span class="bold-span"> R$597,00 ou 12x de R$58,16</span></p>
             <span class="separador-oferta"></span>
             <p>valor exclusivo para a primeira turma</p>
-            <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">não quero perder a oportunidade</a>
+            <a href="#" rel="noopener" target="_blank" class="btn">não quero perder a oportunidade</a>
         </div>
         <img class="garantia" src="imgs/garantia@2x.png" alt="Garantia de 7 dias">
         <p>São 7 dias para decidir se vai ou não continuar <span class="bold-span">sua jornada como profissional fora da curva.</span> Caso não consiga continuar, eu devolvo o seu dinheiro <span class="bold-span"> sem qualquer complicação</span>.</p>
@@ -366,15 +367,14 @@
     <section class="last-cta">
         <h1>Uma metodologia para você seguir de forma clara e objetiva, com passos que de fato fazem a diferença,
             sem nada que não seja realmente necessário.</h1>
-        <a href="https://go.hotmart.com/W55598979H" rel="noopener" target="_blank" class="btn">quero me tornar um psi fora da curva</a>
+        <a href="#" rel="noopener" target="_blank" class="btn">quero me tornar um psi fora da curva</a>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p><span class="bold-span">Flávia C. X &copy; 2021 - Todos os Direitos Reservados</span></p>
-        <p>Duvidas, envie um e-mail para suporte@flaviacx.com.br</p>
+        <p><span class="bold-span">Flávia C.X &copy; 2021 - Todos os Direitos Reservados</span></p>
+        <p>Dúvidas, envie um e-mail para suporte@flaviacx.com.br</p>
     </footer>
-
 </body>
 
 </html>
